--- a/finding_donors_PT.ipynb
+++ b/finding_donors_PT.ipynb
@@ -941,7 +941,7 @@
    "source": [
     "1. Support Vector Machines (SVM)\n",
     "2. Random Forest\n",
-    "3. Logistic Regression  \n",
+    "3. GaussianNB  \n",
     "\n",
     "**Support Vector Machines (SVM):**  \n",
     "* **Aplicação no mundo real**: Support Vector Machines pode ser usado para a classificação de caracteres manuscritos (OCR).\n",
@@ -1481,7 +1481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
